# SIH_Anamoly

./: README.md  pyproject.toml
Multiple_Algo/: unsupervised-anomaly-detection.ipynb
Supervised/: pyproject.toml  supervised-anomaly-detection.ipynb
