[tool.poetry]
name = "supervised"
version = "0.1.0"
description = ""
authors = ["adi-senku <vaditya06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
scikit-learn = "^1.4.0"
pathlib = "^1.0.1"
jupyter = "^1.0.0"
pyemma = "^2.5.12"
keras = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
